--- a/src/Styling/MusicVideo.css
+++ b/src/Styling/MusicVideo.css
@@ -1,5 +1,5 @@
 .music-videos-page {
-  background-color: #0d0d0d;
+  background-color: #14000a;
   color: #fff;
   min-height: 100vh;
   padding: 80px 40px;
